--- a/src/main/resources/buildlabel.properties
+++ b/src/main/resources/buildlabel.properties
@@ -1,18 +1,12 @@
-major.version=1
-minor.version=0
+#generated build information
+#Thu Apr 08 12:14:35 EDT 2021
 patch.number=0
-
-build.number=0000
-build.date.day=16
-build.date.month=March
 build.date.year=2021
-
-#Note: Expression must be a valid SLEL expression.
-#below ends up being injected into build.date
-build.date.format=${build.date.day} ${build.date.month} ${build.date.year}
-
-#below ends up being injected into build.version
 build.version.format=${major.version}.${minor.version}.${patch.number}.${build.number}
-
-#below ends up being injected into build.message displayed on about screen
+minor.version=0
+build.date.month=APRIL
+major.version=1
+build.number=0000
+build.date.day=8
+build.date.format=${build.date.day} ${build.date.month} ${build.date.year}
 build.message.format=Build ${build.version}, built on ${build.date}
